# gaa_scraper

./: DEPLOYMENT_GUIDE.md  Dublin_GAA_Fixtures_Scraper.ipynb  PROJECT_SUMMARY.md  README.md  analyze_results.py  comprehensive_scraper.py  dublin_gaa_comprehensive_2025-07-04_to_2025-07-17.csv  dublin_gaa_comprehensive_2025-07-04_to_2025-07-17.json  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_scraper.py  test_streamlit.py
examples/: advanced_usage.py  basic_usage.py  practical_demo.py
src/: __init__.py  gaa_scraper.py
